[package]
name = "rampos"
version = "0.1.0"
authors = ["i1i1 <vanyarybin1@live.ru>"]
edition = "2018"

[lib]
test = true

[[bin]]
name = "rampos"
test = false

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300 # 5 minutes

[dev-dependencies.test-macros]
git = "https://github.com/rust-embedded/rust-raspi3-OS-tutorials/"

[dependencies]
bitflags = "1.2"
bootloader = "0.8.3"
cpuio = "0.2.0"
spin = "0.5.2"
test-types = { git="https://github.com/rust-embedded/rust-raspi3-OS-tutorials/" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile]
dev = { panic = "abort" }
release = { panic = "abort" }
